--- a/foundry.toml
+++ b/foundry.toml
@@ -15,4 +15,4 @@ runs = 1000
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 [invariant]
 runs = 1000
-fail_on_revert = true
+fail_on_revert = false
